Changelog
=========


1.15.4 (unreleased)
-------------------

- Implement restapi endpoint for newslistingblock. [mathias.leimgruber]


1.15.3 (2021-03-17)
-------------------

- Respect lead image config of NewsListingBlock on new_listing view. [mathias.leimgruber]
- Fix error in mopage when 0.1 fraction of text length has decimal places [Nachtalb]
- Fix error in mopage when text exceeds 100'000 characters [Nachtalb]


1.15.2 (2020-07-30)
-------------------

- Make news archive portlet importable (GS). [mathias.leimgruber]


1.15.1 (2020-05-28)
-------------------

- Remove plone.app.referenceablebehavior in plone 5. [busykoala]


1.15.0 (2020-01-22)
-------------------

- Add option to show the review state in the byline of news listing items. [elioschmutz]


1.14.2 (2020-01-09)
-------------------

- Add ftw.news portal_types translations to plone domain. [tinagerber]


1.14.1 (2019-12-14)
-------------------

- Plone 5: use registry instead of properties. [jone]
- Provide precompiled bundle. [tinagerber]


1.14.0 (2019-12-05)
-------------------

- Fix german translation [Nachtalb]
- New styling for news_listing view [jone, tinagerber]


1.13.1 (2019-09-12)
-------------------

- Fix news folder not shown in navigation (plone5) [Nachtalb]
- Remove src checkouts of plone5 branches of in the meantime released packages [Nachtalb]
- Add missing document description in news_listing view [Nachtalb]


1.13.0 (2019-09-12)
-------------------

- Be able to add custom "more items" link for NewsListingBlocks. [tinagerber]


1.12.0 (2019-08-29)
-------------------

- Remove obsolete source checkouts [Nachtalb]
- Add customizable title to archive portlet [Nachtalb]


1.11.2 (2019-03-29)
-------------------

- Bugfix: Adapt flaky test to not check list order [busykoala]
- Bugfix: Add IS_PLONE_5 implementation independent of ftw.testing [busykoala]


1.11.1 (2019-03-22)
-------------------

- Bugfix: Add missing comma in setup.py [busykoala]



1.11.0 (2019-03-22)