@@ -1,3 +1,4 @@
+from ftw.news.interfaces import INewsFolder
 from ftw.news.interfaces import INewsListingBlock
 from plone import api
 from plone.restapi.batching import HypermediaBatch
@@ -49,3 +50,9 @@ class SerializeNewsListingBlockToJson(SerializeToJson):
 
     def get_query(self):
         return self.context.restrictedTraverse('@@news_listing').get_query()
+
+
+@adapter(INewsFolder, Interface)
+class SerializeNewsFolderToJson(SerializeNewsListingBlockToJson):
+    def __call__(self, version=None, include_items=True):
+        return super(SerializeNewsFolderToJson, self).__call__(version=version)
