@@ -1,5 +1,6 @@
 from ftw.builder import Builder
 from ftw.builder import create
+from ftw.news.restapi.content import SerializeNewsFolderToJson
 from ftw.news.restapi.content import SerializeNewsListingBlockToJson
 from ftw.news.testing import FTW_NEWS_FUNCTIONAL_TESTING
 from ftw.news.tests.base import FunctionalTestCase
@@ -32,7 +33,7 @@ class TestRestApiIntegration(FunctionalTestCase):
         )
 
     @browsing
-    def test_do_not_serialize_news_by_default(self, browser):
+    def test_do_not_serialize_news_by_default_on_block(self, browser):
         browser.open(self.newslistingblock.absolute_url(), method='GET',
                      headers={'Accept': 'application/json'})
         self.assertNotIn('items', browser.json)
@@ -58,3 +59,15 @@ class TestRestApiIntegration(FunctionalTestCase):
 
         self.assertEquals(6, browser.json['items_total'])
         self.assertIn('batching', browser.json)
+
+    @browsing
+    def test_serialize_news_by_default_on_newsfolder(self, browser):
+        browser.open(self.newsfolder.absolute_url(), method='GET',
+                     headers={'Accept': 'application/json'})
+        self.assertNotIn('items', browser.json)
+
+    def test_query_is_from_news_listing_folder_view(self):
+        self.assertDictEqual(
+            self.newsfolder.restrictedTraverse('@@news_listing').get_query(),
+            SerializeNewsFolderToJson(self.newsfolder, self.newsfolder.REQUEST).get_query()
+        )
