@@ -5,7 +5,8 @@ Changelog
 1.15.4 (unreleased)
 -------------------
 
-- Implement restapi endpoint for newslistingblock. [mathias.leimgruber]
+- Implement restapi endpoint for Newslistingblock. [mathias.leimgruber]
+- Implement restapi endpoint for NewsFolder. [mathias.leimgruber]
 
 
 1.15.3 (2021-03-17)
